--- a/articulos.html
+++ b/articulos.html
@@ -1,28 +1,26 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <title>Articulos</title>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="estilos.css">
-<!-- LOGO Y NAVS-->
-    <div class="logo">
-        <img src="media/smart1.png" alt="Panaderia Niño Jesus">
-    </div>
-    
-    <nav>
-        <ul class="nav-links">
-            <li><a href="nosotros.html" target="principal">Nosotros</a></li>
-            <li><a href="panetones.html" target="principal">SmartWatch</a></li>
-            <li><a href="https://www.google.com/maps/d/u/1/edit?mid=1HSI8ScQyJjzdUcJSCz-JbI6A7J0&usp=sharing" target="_blank">Sucursales</a></li>
-        </ul>
-    </nav>
-    
-    <a href="formulario.html" class="btn" target="principal"><button>Formulario</button></a>
-<!-- -->
-</head>
+    <head>
+        <title>Bootstrap Example</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link rel="stylesheet" href="estilos.css">
+    </head>
 <body>
+    <header class="barra-nav">
+        <a href="index.html"><img src="https://www.shutterstock.com/image-vector/pet-grooming-animal-hair-salon-260nw-2181155311.jpg" width="140px"></a>
+        <ul class="barra-nav-pestanas">
+            <li><a href="">HOME</a></li>
+            <li><a href="">SERVICIOS</a></li>
+            <li><a href="articulos.html">ARTICULOS</a></li>
+            <li><a href="horariosdeservicio.html">HORARIOS</a></li>
+            <li><a href="contacto.html">CONTACTO</a></li>
+        </ul>
+    </header>
     <section id="seccion-articDer">
         <div style="display: flex;">
             <section id="articulo">
