--- a/Contacto.html
+++ b/Contacto.html
@@ -16,7 +16,7 @@
                 <ul class="barra-nav-pestanas">
                     <li><a href="">HOME</a></li>
                     <li><a href="">SERVICIOS</a></li>
-                    <li><a href="">ARTICULOS</a></li>
+                    <li><a href="articulos.html">ARTICULOS</a></li>
                     <li><a href="">HORARIOS</a></li>
                     <li><a href="contacto.html">CONTACTO</a></li>
                 </ul>
