--- a/articulos.html
+++ b/articulos.html
@@ -78,8 +78,23 @@
             </section>
         </div>
       </section>
+      <div class="footer">
+        <div class="footer-columnas">
+            <div class="columna">
+                <h3>Contacto</h3>
+                <h2>68975423</h2>
+            </div>
+            <div class="columna">
+                <h3>Dirección</h3>
+                <h2>San Pedro, calle Belzu #4409</h2>
+            </div>
+            <div class="columna">
+            <h3>Nuestras redes</h3>
+                <a href="#" class="fa fa-facebook"></a>
+                <a href="#" class="fa fa-whatsapp"></a>
+                <a href="#" class="fa fa-instagram"></a>
+            </div>
+        </div>
+    </div>
 </body>
-<footer>
-    <p style="text-align: center;">Peluqueria Canina</p>
-</footer>
 </html>
